# etu2

./: .gitignore  CMakeLists.txt  NSFileManager.cpp  main.cpp
cli_tools/: ArgsParser.cpp  ArgsParser.h  Loader.cpp  Loader.h
commons/: BitmapStructs.h
libraries/: lib_bmpcode.cpp  lib_bytelysis.cpp  lib_encoder.cpp  lib_wave.cpp
readers/: FilesystemReader.cpp  FilesystemReader.h  WaveReader.cpp  WaveReader.h
terminal/: Histogram.cpp  Histogram.h  Keyboard.h
writers/: BitmapWriter.cpp  BitmapWriter.h
